add flags and disable them for now